2022-11-23  Charlie Zender  <zender@uci.edu>

	* NCO 5.1.3-alpha01 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.1.3-alpha01: Tavern House';git push
	git tag -a 5.1.3-alpha01 -m 'Functionally identical to 5.1.2';git push --tags

	* Simplify vertical interpolation if input vertical dimension is most-rapidly-varying (--vrt_mrv)

2022-11-18  Charlie Zender  <zender@uci.edu>

	* NCO 5.1.2 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.1.2: Guerilla Poetry';git push
	git tag -a 5.1.2 -m 'ncclimo/ncremap: -P eamxx, --npo, hrd_pth; ncremap ps_nm_in, vrt_in, vrt_out';git push --tags

	* Remove unnecessary assert() in nco_cnk_sz_set_trv() that prevents SCREAM regrid

	* Update package availability on homepage index.shtml

2022-11-16  Charlie Zender  <zender@uci.edu>

	* ncremap pdq_opt includes CMOR dimensions time, olevhalf for MPAS output

2022-11-13  Charlie Zender  <zender@uci.edu>

	* ncks fix accidental assignment of fl_out_fmt to NC_FORMAT_64BIT_OFFSET in nco_prn.c

2022-11-09  Charlie Zender  <zender@uci.edu>

	* Document --ps_nm, --vrt_in in nco.texi

	* Add new options to usage and man pages

	* NCO 5.1.2-beta01 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.1.2-beta01: Nashville';git push
	git tag -a 5.1.2-beta01 -m 'ncclimo/ncremap: -P eamxx, hrd_pth; ncremap ps_nm_in, vrt_in, vrt_out';git push --tags

	* ncz2psx: Add --hrd_pth/--npo support for consistency with ncremap/ncclimo

2022-11-08  Charlie Zender  <zender@uci.edu>

	* NCO 5.1.2-alpha04 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.1.2-alpha04: Ladybug';git push
	git tag -a 5.1.2-alpha04 -m 'ncclimo/ncremap: -P eamxx, hrd_pth';git push --tags

	* ncremap: Turn permutation off (pdq_flg=No, pdq_opt='') unless horizontal regridding is invoked

	* ncclimo/ncremap: --hrd_pth or --npo as first argument sets NCO_PATH_OVERRIDE='Yes'

2022-11-07  Charlie Zender  <zender@uci.edu>

	* ncremap: -P eamxx set pdq_opt=ilev,lev,dim2,col and ps_nm=ps
