@@ -1,3 +1,13 @@
+2022-11-25  Charlie Zender  <zender@uci.edu>
+
+	* NCO 5.1.3-alpha02 release procedure:
+	cd ~/nco;git commit -a -m 'Version 5.1.3-alpha02: Thai Massage';git push
+	git tag -a 5.1.3-alpha02 -m '';git push --tags
+
+	* nco_ntp_vrt() add stubs to automatigically determine flg_hrz_mrv/flr_vrt_mrv
+
+	* nco_map_rgr() assign col_nm_in to ncol_p not ncol_d
+
 2022-11-23  Charlie Zender  <zender@uci.edu>
 
 	* NCO 5.1.3-alpha01 release procedure:
